--- a/issue4/article05/2019-02-20.mdx
+++ b/issue4/article05/2019-02-20.mdx
@@ -1,22 +1,22 @@
 ---
-title: "Interpretacje ruchowe muzyki w metodzie Rytmiki Emila Jaques-Dalcroze a"
+title: 'Interpretacje ruchowe muzyki w metodzie Rytmiki Emila Jaques-Dalcroze a'
 slug: rhythmic-method-of-emil-jaques-dalcroze
-description: "The method of learning and experiencing music through movement  is proposed by Emil Jaques-Dalcroze at the beginning of the  20th century as a very complex, holistic method of artistic education, that leads to harmonious development of man through the movement. Connected with it integrally interpretation of movement, rhythm and music determines the legible and interesting proposal of the cognition of music."
+description: 'The method of learning and experiencing music through movement  is proposed by Emil Jaques-Dalcroze at the beginning of the  20th century as a very complex, holistic method of artistic education, that leads to harmonious development of man through the movement. Connected with it integrally interpretation of movement, rhythm and music determines the legible and interesting proposal of the cognition of music.'
 authors: [annagg]
 tags: [rhythmic, rhythm, perception of music, Eurhythmics]
 ---
+
+import Gallery from '../../src/components/Gallery';
 
 # Interpretacje ruchowe muzyki w metodzie Rytmiki Emila Jaques-Dalcroze’a [Interpretation of Motorial Music in the​ Rhythmic Method of Emil Jaques-Dalcroze]
 
 {/* truncate */}
 
-
-
 ```
 UDC: 78.071.1 Жак-Далкроз E.
      37.015:78(475)
      781.01:793.327
-COBISS.SR-ID 274388492 
+COBISS.SR-ID 274388492
 _________________
 Received:Dec 06, 2018
 Reviewed:Jan 04, 2019
@@ -53,7 +53,24 @@ export function Name({ author, affil, email }) {
 <div>
 	<h4>Abstract</h4>
 	<div>
-		The method of learning and experiencing music through movement  is proposed by Emil Jaques-Dalcroze at the beginning of the  20th century as a very complex, holistic method of artistic education, that leads to harmonious development of man through the movement. Connected with it integrally interpretation of movement/rhythm and music determines the legible and interesting proposal of the cognition of music. The essence of "motorial music" interpretation - the synthesis of music and of planned movement in space - appeals to contemporary determinants of the contemplation of art. The perception of music in general is often associated with activity in the supplementary motor cortex, as is shown in the D. S. Levitin research (This is your brain in music" (quoted in Bader 2013, 398), published by Dulton, NY in  2006.), pointing to a strong influence of movement and perception in music. Moreover, an author desires to emphasize these words with large determination: Let us not be afraid of to be created artistic visions of music in the movement and space, marked by the features of individuals, because, exactly motorial  music is the perfect manner of the perception of a musical work, which makes both performers and receivers part of the whole, involving them in the world of music. 
+		The method of learning and experiencing music through movement is proposed
+		by Emil Jaques-Dalcroze at the beginning of the 20th century as a very
+		complex, holistic method of artistic education, that leads to harmonious
+		development of man through the movement. Connected with it integrally
+		interpretation of movement/rhythm and music determines the legible and
+		interesting proposal of the cognition of music. The essence of "motorial
+		music" interpretation - the synthesis of music and of planned movement in
+		space - appeals to contemporary determinants of the contemplation of art.
+		The perception of music in general is often associated with activity in the
+		supplementary motor cortex, as is shown in the D. S. Levitin research (This
+		is your brain in music" (quoted in Bader 2013, 398), published by Dulton, NY
+		in 2006.), pointing to a strong influence of movement and perception in
+		music. Moreover, an author desires to emphasize these words with large
+		determination: Let us not be afraid of to be created artistic visions of
+		music in the movement and space, marked by the features of individuals,
+		because, exactly motorial music is the perfect manner of the perception of a
+		musical work, which makes both performers and receivers part of the whole,
+		involving them in the world of music.
 		<div>
 			<strong>Keywords:</strong>
 			<i>
@@ -68,13 +85,15 @@ export function Name({ author, affil, email }) {
 
 <div className='text'>
 
+<Gallery images={[{ src: '../p1.png', alt: 'Picture 13.' }]} />
+
 ## Wprowadzenie
 
-Dalcrozowska metoda edukacji muzycznej zakłada wszechstronny rozwój człowieka w wielu jego sferach. Ruch stanowiący podstawę Rytmiki prowadzi do harmonijnego progresu całego organizmu człowieka. Emil Jaques – Dalcroze nawiązując do słynnej definicji Platona "(…) rytm jest porządkiem ruchu" (E. Jaques-Dalcroze 1992, 9), dodaje: "Mięśnie stworzone są dla ruchu, a rytm jest właśnie ruchem" (Ibidem,  17).
+Dalcrozowska metoda edukacji muzycznej zakłada wszechstronny rozwój człowieka w wielu jego sferach. Ruch stanowiący podstawę Rytmiki prowadzi do harmonijnego progresu całego organizmu człowieka. Emil Jaques – Dalcroze nawiązując do słynnej definicji Platona "(…) rytm jest porządkiem ruchu" (E. Jaques-Dalcroze 1992, 9), dodaje: "Mięśnie stworzone są dla ruchu, a rytm jest właśnie ruchem" (Ibidem, 17).
 
 Dalcroze uczynił ruch podstawą swojego kreatywnego systemu nauczania muzycznego. Wszystkie jego elementy: rytmika, solfeż i improwizacja prowadzą do artystycznej odsłony dalcrozowskiej metody, którą stanowią interpretacje ruchowe muzyki. Ta doskonała forma urzeczywistniania muzyki w ruchu ludzkiego ciała, zaplanowanego w przestrzeni sceny, stała się tematem niniejszego artykułu. Omawiana problematyka przedstawiona zostanie w kontekście osobistych doświadczeń autorki, związanych z tworzeniem interpretacji ruchowych muzyki prezentowanych na scenie, jak również odnosi się do opublikowanego dzieła artystycznego: płyty DVD, książki i albumu fotograficznego, wydanego jako dzieło zintegrowane, pod wspólnym tytułem Brzmienie w interpretacjach ruchowych utworu muzycznegoDebussy, Cage, Penderecki, Szalonek, Dobrowolski, Olczak, Kaiser (Galikowska-Gajewska 2012).
 
-## ​​Aspekt historyczny 
+## ​​Aspekt historyczny
 
 Słowa, które zawsze warto przypominać współczesnym, słowa, które nigdy nie tracą na swojej wartości – artystyczne credo Emila Jaques-Dalcroze’a:
 
@@ -82,7 +101,7 @@ Słowa, które zawsze warto przypominać współczesnym, słowa, które nigdy ni
 
 Twórca Rytmiki był przekonany, że ciało ludzkie może coś wyrażać i przekazywać treści nie wypowiedziane słowami, lecz za pomocą ruchu. Dlatego też twierdził, że to właśnie:
 
-> ciało ludzkie, ten doskonały instrument ruchu, należy kształcić przez specjalne studia artystyczne, mające na celu obudzenie temperamentu, przezwyciężenie oporów nerwowych, stworzenie korelacji między wyobraźnią a środkami realizacji, rozwinięcie, zdyscyplinowanie i zharmonizowanie środków wypowiedzi. (Gerhardt – Punicka  1963, 79)
+> ciało ludzkie, ten doskonały instrument ruchu, należy kształcić przez specjalne studia artystyczne, mające na celu obudzenie temperamentu, przezwyciężenie oporów nerwowych, stworzenie korelacji między wyobraźnią a środkami realizacji, rozwinięcie, zdyscyplinowanie i zharmonizowanie środków wypowiedzi. (Gerhardt – Punicka 1963, 79)
 
 Zauważył on również, że odpowiednio przygotowane i kształcone ludzkie ciało jest w stanie wyrazić wszystkie niuanse muzyki. Dalcrozowska edukacja ruchowa pomaga w osiągnięciu pełnej swobody, ekspresyjności i zdolności przeżywania i odczuwania muzyki własnym ciałem. Ekspresyjność muzyki, jej cały ładunek emocjonalny, znalazły swoje odzwierciedlenie w estetycznym i naturalnym ruchu wykonawców. W swoich poszukiwaniach naturalnej i spontanicznej formy ruchu wyrażającej muzykę, sięgnął Emil Jaques-Dalcroze do spuścizny kultury greckiej, której szczytne idee wychowania i kształtowania ludzkich serc, ciał i umysłów stały się niedoścignionym wzorem dla wielu pokoleń twórców. Zainspirowany starożytnymi rzeźbami greckimi, stworzył dwadzieścia gestów, które zastosował w swojej metodzie. Jednocześnie twórca Rytmiki poszukiwał takiego rodzaju ruchu, który nie był celem sam w sobie, ale ruchem tak podporządkowanym muzyce i tak wynikającym z niej, aby "[…] aby ciało stawało się muzyką." (Porte 1974).
 
@@ -90,20 +109,19 @@ Dalcroze odkrył, że ciało ludzkie może wyrażać ekspresję utworu muzyczneg
 
 Rytmika stanowi podstawę metody: "Jest formą kształcenia muzycznego, opartą przede wszystkim na słuchaniu i kształceniu ruchowym […]" (Ibidem.) "Rytmika uczy koncepcji rytmu, struktury i ekspresji muzycznej poprzez ruch" (Galikowska-Gajewska 2012, 45). John R. Stevenson pisze: "W rytmice ruch ciała jest dominującym doświadczeniem (…)" (Galikowska-Gajewska, ibidem.).
 
-Integralną częścią rytmiki jest interpretacja ruchowa muzyki, początkowo zwana przez twórcę Rytmiki plastyką ożywioną — plastique animée (Plastique animée — określenie wprowadzone przez samego Emila Jaques-Dalcroze’a. Obecnie w Polsce w programach nauczania funkcjonujejako "Technika i ekspresja ruchu" bądź "Ćwiczenia ekspresji ruchowej", zob. więcej: E. Jaques-Dalcroze 1992, 63–84). Plastique animée, zwana dzisiaj ekspresją ruchową jest fundamentalnym elementem interpretacji ruchowych, stanowiących artystyczną nadbudowę metody Dalcroze’a. Podstawą interpretacji ruchowych są bliskie relacje między muzyką i ruchem, co podkreślał twórca Rytmiki w następujących słowach: "Celem rytmiki jest wyrażanie ruchami ciała znaczeń zawartych w muzyce (…) (Jaques –Dalcroze 1992, 63). Muzyka emocjonalnie oddziaływując na człoweka stymuluje jego wyobraźnię. Dlatego też interpretacja ruchowa muzyki – ożywiony obraz utworu muzycznego – przedstawiony w ruchu wykonawców, zakomponowanych w przestrzeni sceny – staje się narzędziem wizualizacji muzycznej. 
+Integralną częścią rytmiki jest interpretacja ruchowa muzyki, początkowo zwana przez twórcę Rytmiki plastyką ożywioną — plastique animée (Plastique animée — określenie wprowadzone przez samego Emila Jaques-Dalcroze’a. Obecnie w Polsce w programach nauczania funkcjonujejako "Technika i ekspresja ruchu" bądź "Ćwiczenia ekspresji ruchowej", zob. więcej: E. Jaques-Dalcroze 1992, 63–84). Plastique animée, zwana dzisiaj ekspresją ruchową jest fundamentalnym elementem interpretacji ruchowych, stanowiących artystyczną nadbudowę metody Dalcroze’a. Podstawą interpretacji ruchowych są bliskie relacje między muzyką i ruchem, co podkreślał twórca Rytmiki w następujących słowach: "Celem rytmiki jest wyrażanie ruchami ciała znaczeń zawartych w muzyce (…) (Jaques –Dalcroze 1992, 63). Muzyka emocjonalnie oddziaływując na człoweka stymuluje jego wyobraźnię. Dlatego też interpretacja ruchowa muzyki – ożywiony obraz utworu muzycznego – przedstawiony w ruchu wykonawców, zakomponowanych w przestrzeni sceny – staje się narzędziem wizualizacji muzycznej.
 
 W pierwszych interpretacjach ruchowych twórca Rytmiki ożywiał 20 gestów. Wydarzenie z 1912 roku - wystawienie w Hellerau. (Instytut w Hellerau został ufundowany przez niemieckich braci Dorn. Tam w mieście – ogrodzie Dalcroze rozwijaj swoją metodę. Obecnie jest to europejskie centrum dalcrozowskie.) II aktu Orfeusza Glücka, jeden z krytyków określił następująco: "To, co się tam działo, różniło się od zwykłego teatru, jak prawda różni się od kłamstwa. Było to niezwykłe widowisko. W jednym czasie i w jednym miejscu rozbrzmiewała muzyka (orkiestrą dyrygował sam Dalcroze), ruchowy obraz muzyki w przestrzeni (choreografię) przedstawiał wielki zespół wykonawców (na wzór teatru greckiego odzianych w tuniki), ruch i światło ściśle ze sobą były zespolone, w nowy sposób wykorzystano scenę przez zastosowanie schodów i praktykabli. To wszystko sprawiało kolosalne wrażenie i budziło zachwyt widzów" (Mieczyńska-Lewakowska 1993, 43). Skróconą wersję opery wystawiono w 1913 roku.
 
-## Polskie spojrzenie na ​interpretację ruchową 
+## Polskie spojrzenie na ​interpretację ruchową
 
 Zaproponowany przez Dalcroze’a w postaci interpretacji ruchowych prosty a zarazem czytelny sposób przedstawienia muzyki w ruchu i przestrzeni, ewaluował tak, jak zmieniała się muzyka, czasy i ludzie. Niezmienna pozostaje istota tej artystycznej formy, którą tak doskonale tłumaczą słowa Friedricha Schillera:
 
 > Kiedy muzyka osiąga najszlachetniejszą moc, staje się kształtem w przestrzeni. (Appia 1974, 95)
 
-
 Bo czymże jest interpretacja muzyki, jak nie właśnie ruchowym kształtem muzyki przedstawionym w ekspresyjnym ruchu wykonawców w przestrzeni. W tej kreacji twórczej, konkretny wymiar muzyki urzeczywistnia w ruchu ciało człowieka. Sztuka tworzenia interpretacji ruchowej muzyki to permanentne budowanie relacji między muzyką, ludzkim ciałem, ruchem i przestrzenią.
 
-Ta właśnie pespektywa oraz bagaż doświadczeń wpływają na indywidualne rozumienie i definiowanie omawianego zagadnienia. I tak Monika Skazińska (zasłużona polska artystka, pedagog rytmiki i choreograf) mówiła: 
+Ta właśnie pespektywa oraz bagaż doświadczeń wpływają na indywidualne rozumienie i definiowanie omawianego zagadnienia. I tak Monika Skazińska (zasłużona polska artystka, pedagog rytmiki i choreograf) mówiła:
 
 > Interpretacja ruchowa to sposób objaśnienia tegoż utworu środkami ruchowymi. Jej zadaniem jest przełożenie podstawowego tworzywa muzyki — "języka dźwięków", na "język ruchów". (Skazińska 1989, 215)
 
@@ -111,34 +129,31 @@ Z kolei dla autorki artykułu:
 
 > Interpretacje ruchowe są najpełniejszym i najdoskonalszym sposobem odzwierciedlenia muzyki za pomocą środków przestrzenno-ruchowych. Stanowią syntezę muzyki i ruchu, przez co pozwalają na głębsze przeżycie i doświadczenie muzyki upostaciowionej w ruchu ludzkiego ciała. (Galikowska-Gajewska 2012, 49)
 
-
 Interpretacje ruchowe muzyki stanowią podsumowanie wszystkich działań prowadzonych w ramach dalcrozowskiego kształcenia. Są wyrazem integracji muzyki i ruchu. Osobiste doświadczanie i odczuwanie muzyki ruchem ludzkiego ciała, będące podstawą wszystkich działań muzyczno-ruchowych prowadzi do zrozumienia muzyki, do lepszej i łatwiejszej percepcji dzieła muzycznego, aż wreszcie (w kontekście wykonawców interpretacji ruchowych) do ekspresyjnego wyrażania ekspresji samej muzyki poprzez realizację ruchową. Jedność muzyki z ruchem jest wyrazem pełnego zespolenia dzieła muzycznego z jego wizualizacją przestrzenno-ruchową, która przebiega synchronicznie w czasie i przestrzeni.
 
-Taki sposób obcowania z muzyką najsilniej oddziałuje w procesie kształcenia profesjonalistów: muzyków, tancerzy, aktorów i wokalistów [W Polsce Rytmika jest obowiązkowym przedmiotem realizowanym w szkolnictwie muzycznym I i II stopnia, w szkołach baletowych, w szkołach ogólnokształcących, w ogniskach muzycznych, w Akademiach Muzycznych, Pedagogicznych, Wyższych Szkołach Teatralnych i Filmowych].  Studia w zakresie Rytmiki oferuje 6 polskich uczelni muzycznych, zarówno na poziomie licencjackim, jak i magisterskim [Rytmikę studiować można na studiach I i II stopnia w Akademii Muzycznej w Gdańsku, Poznaniu, Łodzi, Krakowie, Katowicach oraz na Uniwersytecie Muzycznym w Warszawie]. Jednakże doświadczać i przeżywać muzykę w ruchu mogą dzieci, młodzież i dorośli, biorący udział w ruchu amatorskim. Zajęcia rytmiki prowadzone są w domach i pałacach kultury, w ośrodkach szkolno-wychowawczych i terapeutycznych, w placówkach kulturalno-oświatowych, w ogniskach pracy pozaszkolnej.
+Taki sposób obcowania z muzyką najsilniej oddziałuje w procesie kształcenia profesjonalistów: muzyków, tancerzy, aktorów i wokalistów [W Polsce Rytmika jest obowiązkowym przedmiotem realizowanym w szkolnictwie muzycznym I i II stopnia, w szkołach baletowych, w szkołach ogólnokształcących, w ogniskach muzycznych, w Akademiach Muzycznych, Pedagogicznych, Wyższych Szkołach Teatralnych i Filmowych]. Studia w zakresie Rytmiki oferuje 6 polskich uczelni muzycznych, zarówno na poziomie licencjackim, jak i magisterskim [Rytmikę studiować można na studiach I i II stopnia w Akademii Muzycznej w Gdańsku, Poznaniu, Łodzi, Krakowie, Katowicach oraz na Uniwersytecie Muzycznym w Warszawie]. Jednakże doświadczać i przeżywać muzykę w ruchu mogą dzieci, młodzież i dorośli, biorący udział w ruchu amatorskim. Zajęcia rytmiki prowadzone są w domach i pałacach kultury, w ośrodkach szkolno-wychowawczych i terapeutycznych, w placówkach kulturalno-oświatowych, w ogniskach pracy pozaszkolnej.
 
 Ten polski współczesny obraz zarówno profesjonalnego kształcenia metodą Rytmiki jak i oferowanie jej szerszemu gronu odbiorców, ukazuje skalę oddziaływań dalcrozowskiej metody, a niej niezwykle ważną rolę, jaką pełnią interpretacje ruchowe. Ścisłe podporządkowania ruchu - muzyce, ta czytelna relacja:
 
->  prowadzi wszystkich uczestniczących w interpretacjach ruchowych muzyki do intensywnego przeżywania muzyki w ruchu, jak również do utożsamiania się wykonawców z realizowaną muzyką. Ciało ludzkie staje się tu przekaźnikiem emocji, uczuć i ekspresji samej muzyki. (Galikowska-Gajewska  2015, 22)
-
+> prowadzi wszystkich uczestniczących w interpretacjach ruchowych muzyki do intensywnego przeżywania muzyki w ruchu, jak również do utożsamiania się wykonawców z realizowaną muzyką. Ciało ludzkie staje się tu przekaźnikiem emocji, uczuć i ekspresji samej muzyki. (Galikowska-Gajewska 2015, 22)
 
 Interpretacje ruchowe muzyki prowadzą również uczestników do harmonijnego rozwoju, niezależnie od wieku. A przecież twórca Rytmika tak bardzo zabiegał w swojej metodzie właśnie o ten zrównoważony rozwój, zalecając ćwiczenia rozwijające i podnoszące świadomość poczucia własnego ciała, rozumianą jako nasze wyobrażenie o całym organizmie, ale też o poszczególnych jego częściach (Brzozowska-Kuczkiewicz op. cit., 47). Psycholog Henri Wallon tak tłumaczy:
 
 > świadomość poczucia ciała jest zasadniczym elementem niezbędnym do budowania własnej osobowości, jest to mnie lub więcej całościowe, specyficzne i zróżnicowane wrażenie, jakie ma jednostka w odniesieniu do własnego ciała. (M. Brzozowska-Kuczkiewicz op. cit., 47, według L. Picq i P. Vayer 1970)
 
-Niezależnie od spojrzenia na tę problematykę, świadomość poczucia ciała zakłada ścisłą relację pomiędzy ciałem a umysłem. Związki te akcentuje m. in. Mabel Todd (Amerykanka, jedna z twórców nauki zajmującej się związkami między obrazami mentalnymi i ruchem, idea kinezjologii (wyobrażeń odnoszących się do ruchu) w swojej metodzie Structual higiene , podkreślając: 
+Niezależnie od spojrzenia na tę problematykę, świadomość poczucia ciała zakłada ścisłą relację pomiędzy ciałem a umysłem. Związki te akcentuje m. in. Mabel Todd (Amerykanka, jedna z twórców nauki zajmującej się związkami między obrazami mentalnymi i ruchem, idea kinezjologii (wyobrażeń odnoszących się do ruchu) w swojej metodzie Structual higiene , podkreślając:
 
-> jak wspaniale jest zbudowane ludzie ciało i że ma ono zdolność zmieniania się zgodnie z naszą wolą. (Franklin  2007, 25, cyt. za: M. Todd)
+> jak wspaniale jest zbudowane ludzie ciało i że ma ono zdolność zmieniania się zgodnie z naszą wolą. (Franklin 2007, 25, cyt. za: M. Todd)
 
-Interpretacje ruchowe - dalcrozowski sposób kontemplowania i wyrażania muzyki za pomocą ruchów i gestów dedykowany jest każdemu. Ten uniwersalizm, jak wspomniano już wyżej, odwołuje się do naturalnego i estetycznego ruchu człowieka. Dlatego też w Polsce proste interpretacje ruchowe muzyki są już stałym elementem procesu umuzykalniania dzieci w przedszkolu. Stanowią szalenie ważny element profesjonalnej edukacji muzyczne, a w niej dalcrozowskiej rytmiki, począwszy od podstawowej szkoły muzycznej, poprzez szkołę średnią, a na studiach muzycznych kończąc. 
+Interpretacje ruchowe - dalcrozowski sposób kontemplowania i wyrażania muzyki za pomocą ruchów i gestów dedykowany jest każdemu. Ten uniwersalizm, jak wspomniano już wyżej, odwołuje się do naturalnego i estetycznego ruchu człowieka. Dlatego też w Polsce proste interpretacje ruchowe muzyki są już stałym elementem procesu umuzykalniania dzieci w przedszkolu. Stanowią szalenie ważny element profesjonalnej edukacji muzyczne, a w niej dalcrozowskiej rytmiki, począwszy od podstawowej szkoły muzycznej, poprzez szkołę średnią, a na studiach muzycznych kończąc.
 
-Dzieci w szkole muzycznej I stopnia poznają muzykę i wyrażają ją ruchem w prostych interpretacjach ruchowych. Ten rodzaj aktywności ruchowej wywołuje w nich wiele spontaniczności i radości. Trudniejszy repertuar muzyczny towarzyszy uczniom w ramach przedmiotów: Rytmika i Zespoły rytmiki na poziomie II stopnia kształcenia muzycznego. W najpełniejszym wymiarze doświadczają bliskich a zarazem bardzo dojrzałych relacji z muzyką, studenci specjalności Rytmika w ramach przedmiotów realizowanych w toku studiów, takich jak: Rytmika, Kompozycje ruchowe utworów muzycznych, Zespoły rytmiki. Uczestnicy zajęć w twórczym procesie powstawania kompozycji przestrzenno-ruchowej zapoznają się z utworem, z genezą jego powstania, poznają formę dzieła muzycznego, dokonując analizy formalnej utworu, poznają zapis nutowy – partyturę, Jednakże to spontaniczne reakcje ruchowe towarzyszące improwizacji ruchowej do pierwszej odsłony wybranego utworu, stanowią najcenniejsze - osobiste doświadczenie zmysłowe. Takie sposób obcowania z muzyką (w trakcie pracy nad kompozycją przestrzenno-ruchową) jest gwarantem lepszego jej zrozumienia i poznania. 
+Dzieci w szkole muzycznej I stopnia poznają muzykę i wyrażają ją ruchem w prostych interpretacjach ruchowych. Ten rodzaj aktywności ruchowej wywołuje w nich wiele spontaniczności i radości. Trudniejszy repertuar muzyczny towarzyszy uczniom w ramach przedmiotów: Rytmika i Zespoły rytmiki na poziomie II stopnia kształcenia muzycznego. W najpełniejszym wymiarze doświadczają bliskich a zarazem bardzo dojrzałych relacji z muzyką, studenci specjalności Rytmika w ramach przedmiotów realizowanych w toku studiów, takich jak: Rytmika, Kompozycje ruchowe utworów muzycznych, Zespoły rytmiki. Uczestnicy zajęć w twórczym procesie powstawania kompozycji przestrzenno-ruchowej zapoznają się z utworem, z genezą jego powstania, poznają formę dzieła muzycznego, dokonując analizy formalnej utworu, poznają zapis nutowy – partyturę, Jednakże to spontaniczne reakcje ruchowe towarzyszące improwizacji ruchowej do pierwszej odsłony wybranego utworu, stanowią najcenniejsze - osobiste doświadczenie zmysłowe. Takie sposób obcowania z muzyką (w trakcie pracy nad kompozycją przestrzenno-ruchową) jest gwarantem lepszego jej zrozumienia i poznania.
 
-
-## ​Muzyka w interpretacjach ruchowych 
+## ​Muzyka w interpretacjach ruchowych
 
 Wybór muzyki do interpretacji ruchowej uzależniony jest od wielu czynników. Jednym z nich jest grupa, z którą pracuje nauczyciel i rodzaj placówki, w której prowadzone są zajęcia Rytmiki. Inny repertuar muzyczny przeznaczony jest dla dzieci, inny dla młodzieży i osób dorosłych. Podział ten związany jest z możliwościami percepcyjnymi i ruchowymi osób w różnym wieku. Kolejnym kryterium wyboru utworów do interpretacji ruchowych są indywidualne zainteresowania twórców choreografii związane z konkretnym stylem w muzyce czy wybranym kompozytorem itp. W opinii autorki to właśnie ten czynnik wpływa najbardziej inspirująco na podejmowanie wyzwań w zakresie powstawania interpretacji ruchowych.
 
-Dzieło muzyczne rozumiane jako synteza wielu elementów w interpretacji ruchowej: 
+Dzieło muzyczne rozumiane jako synteza wielu elementów w interpretacji ruchowej:
 
 > podlega wizualizacji w postaci obrazu ruchowego zakomponowanego w przestrzen. (Galikowska-Gajewska 2010, 46)
 
@@ -148,34 +163,33 @@ Utwór muzyczny stanowiący inspirację do pracy twórczej, powinien pobudzać s
 
 W procesie tworzenia interpretacji ruchowych muzyki powinniśmy dotrzeć do informacji związanych z genezą powstania utworu – do źródeł inspiracji dla kompozytora. Ważna jest również estetyka muzyczna epoki, w której powstał utwór. Jednakże najważniejsze są poszukiwania odpowiednich ruchów ludzkiego ciała, które są w stanie oddać wszystkie odcienie emocji i ekspresji samego dzieła muzycznego.
 
-Dla autorki artykułu muzyka współczesna jest największym natchnieniem. Wszechstronność dzieł współczesnych, wynikająca przede wszystkim z bogactwa muzycznego brzmienia, stwarza olbrzymie możliwości kreacji i odkrywania oryginalnych rozwiązań przestrzenno-ruchowych. Muzyka współczesna bardzo silnie oddziałująca na ludzką wyobraźnię jest doskonałym bodźcem do ciągłych poszukiwań ruchowych, których ograniczenia mogą wynikać jedynie z możliwości anatomicznych ludzkiego ciała. 
+Dla autorki artykułu muzyka współczesna jest największym natchnieniem. Wszechstronność dzieł współczesnych, wynikająca przede wszystkim z bogactwa muzycznego brzmienia, stwarza olbrzymie możliwości kreacji i odkrywania oryginalnych rozwiązań przestrzenno-ruchowych. Muzyka współczesna bardzo silnie oddziałująca na ludzką wyobraźnię jest doskonałym bodźcem do ciągłych poszukiwań ruchowych, których ograniczenia mogą wynikać jedynie z możliwości anatomicznych ludzkiego ciała.
 
 Najprostsze formy ilustrowania muzyki w ruchu i przestrzeni przez najmłodsze dzieci odnoszą się przede wszystkim do wizualizacji podstawowych elementów dzieła muzycznego, o których pisze Dalcroze:
 
-> Rytm, podobnie jak dynamika, zależy całkowicie od ruchu i znajduje swój prototyp w naszym układzie mięśniowym. Wszystkie niuanse agogiczne (allegro, andante, accelerando, ritenuto) wszystkie niuanse dynamiczne (forte, piano, crescendo, diminuendo) mogą być realizowane przez nasze ciała, a ostrość naszego muzycznego uczucia zależeć będzie od ostrości naszych cielesnych wrażeń. (Dalcroze  2000, 60)
-
+> Rytm, podobnie jak dynamika, zależy całkowicie od ruchu i znajduje swój prototyp w naszym układzie mięśniowym. Wszystkie niuanse agogiczne (allegro, andante, accelerando, ritenuto) wszystkie niuanse dynamiczne (forte, piano, crescendo, diminuendo) mogą być realizowane przez nasze ciała, a ostrość naszego muzycznego uczucia zależeć będzie od ostrości naszych cielesnych wrażeń. (Dalcroze 2000, 60)
 
 Dynamika w ludzkim ciele związana jest systemem mięśniowym. Każdy impuls muzyczny, każdy dźwięk, możemy wyrazić poprzez napięcie i rozluźnienie mięśni. Musimy również połączyć to muzyczne zagadnienie z wielkością ruchu i przestrzenią. Należy zdać sobie sprawę, że nie jest to łatwe dla dzieci. Nie potrafią one jeszcze świadomie napinać i rozluźniać mięśni. Dlatego potrzebujemy dla nich wsparcia, rekwizytów.
 
 Użycie rekwizytów w interpretacjach ruchowych może być wielorakie. Można traktować je jako rodzaj scenografii, dekoracji na scenie. Do rekwizytów zaliczyć należy również kostium sceniczny czy różnorakie przedmioty użyte w celu wyrażenia emocjonalności i ekspresyjności muzyki w ruchu. Nieodzownym elementem prezentacji scenicznych jest również oświetlenie. Już na scenie w Hellerau eksperymentował ze światłem Adolph Appia, zdając sobie sprawę z niesamowicie ważnej, ekspresyjnej oraz scalającej roli, tegoż elementu dla całości percypowanego dzieła scenicznego. Współcześnie oświetlenie traktowane jest w działaniach scenicznych w dwojaki sposób. Jako element scalający sceniczną prezentację bądź jako samodzielny sposób wypowiedzi. Do palety najnowszych środków scenicznych, z których korzystamy współcześnie, prezentując interpretacje ruchowe na scenie, zaliczyć należy prezentacje multimedialne czy bardziej zaawansowane - animacje i wizualizacje. Mając do wyboru coraz to bogatszą paletę środków technicznych, wzmacniających ekspresję scenicznej wypowiedzi (autorka odnosi się tu do interpretacji ruchowych), nie można zapominać o przewodniej roli muzyki, którą podkreśla i manifestuje w słowach Emil Jaques-Dalcroze;
 
-> Cały mój system zbudowałem na muzyce dlatego, że muzyka jest potężną siłą psychiczną, wynikłą z naszego działania duchowego i wyrazowego, która dzięki swej możności pobudzania i regulowania może porządkować nasze czynności życiowe. (Brzozowska – Kuczkiewicz  op. cit., 31)
+> Cały mój system zbudowałem na muzyce dlatego, że muzyka jest potężną siłą psychiczną, wynikłą z naszego działania duchowego i wyrazowego, która dzięki swej możności pobudzania i regulowania może porządkować nasze czynności życiowe. (Brzozowska – Kuczkiewicz op. cit., 31)
 
-Poniżej zamieszczono zdjęcia autorskich interpretacji ruchowych, przygotowanych z udziałem dzieci: uczniów klas 1-3 Państwowej Szkoły Muzycznej im. Witolda Lutosławskiego w Starogardzie Gdańskim oraz absolwentów i studentów specjalności Rytmika, Akademii Muzycznej im. Stanisława Moniuszki w Gdańsku (Zdjęcie 1-5.). Wybrane zdjęcia z rekwizytami opatrzono krótkim komentarzem – uzasadnieniem użycia konkretnego rekwizytu. 
+Poniżej zamieszczono zdjęcia autorskich interpretacji ruchowych, przygotowanych z udziałem dzieci: uczniów klas 1-3 Państwowej Szkoły Muzycznej im. Witolda Lutosławskiego w Starogardzie Gdańskim oraz absolwentów i studentów specjalności Rytmika, Akademii Muzycznej im. Stanisława Moniuszki w Gdańsku (Zdjęcie 1-5.). Wybrane zdjęcia z rekwizytami opatrzono krótkim komentarzem – uzasadnieniem użycia konkretnego rekwizytu.
 
 Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują relacje między wykonawcami (Zdjęcie 5.).
 ​
-> Zastosowany w kompozycji rekwizyt — trampolina, podkreśla specyfikę brzmieniowości utworu. W interpretacji ruchowej Our Spring Will Come (Zdjęcie 6.) bierze udział pięć wykonawczyń ubranych w czarne kostiumy. Wspólny kolor strojów symbolizuje tu jedność dźwiękową fortepianu. (Galikowska-Gajewska 2012,  71)
 
-> Osiem białych materiałów użytych przez wykonawców w interpretacji ruchowej utworu Anaklasis (Zdjęcie 7), podkreśla szerokie spektrum brzmieniowe przebiegu muzycznego. (Galikowska-Gajewska  Ibidem,  94)
+> Zastosowany w kompozycji rekwizyt — trampolina, podkreśla specyfikę brzmieniowości utworu. W interpretacji ruchowej Our Spring Will Come (Zdjęcie 6.) bierze udział pięć wykonawczyń ubranych w czarne kostiumy. Wspólny kolor strojów symbolizuje tu jedność dźwiękową fortepianu. (Galikowska-Gajewska 2012, 71)
+
+> Osiem białych materiałów użytych przez wykonawców w interpretacji ruchowej utworu Anaklasis (Zdjęcie 7), podkreśla szerokie spektrum brzmieniowe przebiegu muzycznego. (Galikowska-Gajewska Ibidem, 94)
 
 > W tej choreografii muzyki istotną rolę odgrywa rekwizyt-drabina (Zdjęcie 8). To ona staje się dla wykonawców płaszczyzną do ukazania relacji pomiędzy instrumentami w zakresie wysokości dźwięków i rejestrów. Charakterystyczne brzmienie w utworze podkreślone zostało odpowiednim doborem kostiumów w czarno-pomarańczowych barwach. (Galikowska-Gajewska Ibidem, 142-143)
 
-- Oświetlenie sceny stanowi wyrazisty element interpretacji ruchowej. (Zdjęcie 9). 
-- Kostiumy wykonawców (ich różnorodne kroje) podkreślają nowoczesny charakter eletroakustycznego utworu Dinosaur Bones (Zdjęcie 10). 
-- Dwie wykonawczynie symbolizują dwa różne rejestry wiolonczeli. Użyty rekwizyt – maska – scala i jednoczy je w ruchu  (Zdjęcie 11-12).
+- Oświetlenie sceny stanowi wyrazisty element interpretacji ruchowej. (Zdjęcie 9).
+- Kostiumy wykonawców (ich różnorodne kroje) podkreślają nowoczesny charakter eletroakustycznego utworu Dinosaur Bones (Zdjęcie 10).
+- Dwie wykonawczynie symbolizują dwa różne rejestry wiolonczeli. Użyty rekwizyt – maska – scala i jednoczy je w ruchu (Zdjęcie 11-12).
 - Wykorzystane w interpretacji ruchowej kostiumy nawiązują do quasi-barokowej maniery, w której kompozytor napisał utwór. Natomiast krzesła stanowią ruchomy element scenografii (Zdjęcie 13).
-
 
 <div className='imageGallery'>
 
@@ -234,7 +248,8 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 5.'
 		/>
 		<figcaption>
-			**Zdjęcie 5.** J.S.Bach, Badinerie z II suity orkiestrowej h –moll. (Autor: Przemysław Gabryel)
+			**Zdjęcie 5.** J.S.Bach, Badinerie z II suity orkiestrowej h –moll.
+			(Autor: Przemysław Gabryel)
 		</figcaption>
 	</figure>
 </div>
@@ -246,7 +261,7 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 6.'
 		/>
 		<figcaption>
-			**Zdjęcie 6.**  J. Cage, Our Spring Will Come. (Autor: Piotr Rodak)
+			**Zdjęcie 6.** J. Cage, Our Spring Will Come. (Autor: Piotr Rodak)
 		</figcaption>
 	</figure>
 </div>
@@ -258,7 +273,7 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 7.'
 		/>
 		<figcaption>
-			**Zdjęcie 7.**  K. Penderecki, Anaklasis. (Autor: Piotr Rodak)
+			**Zdjęcie 7.** K. Penderecki, Anaklasis. (Autor: Piotr Rodak)
 		</figcaption>
 	</figure>
 </div>
@@ -282,7 +297,8 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 9.'
 		/>
 		<figcaption>
-			**Zdjęcie 9.** K. Olczak, Trio hommage á Karol Szymanowski. (Autor: Piotr Rodak)
+			**Zdjęcie 9.** K. Olczak, Trio hommage á Karol Szymanowski. (Autor: Piotr
+			Rodak)
 		</figcaption>
 	</figure>
 </div>
@@ -306,7 +322,8 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 11.'
 		/>
 		<figcaption>
-			**Zdjęcie 11.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor: Sylwia Holeksa-Wilkowska)
+			**Zdjęcie 11.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor:
+			Sylwia Holeksa-Wilkowska)
 		</figcaption>
 	</figure>
 </div>
@@ -318,7 +335,8 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 12.'
 		/>
 		<figcaption>
-			**Zdjęcie 12.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor: Sylwia Holeksa-Wilkowska)
+			**Zdjęcie 12.** H. H. Jabłoński, Capriccio no 1 for cello solo. (Autor:
+			Sylwia Holeksa-Wilkowska)
 		</figcaption>
 	</figure>
 </div>
@@ -330,7 +348,8 @@ Użyte rekwizyty - krzesła stanowią stały element scenografii i dynamizują r
 			alt='Picture 13.'
 		/>
 		<figcaption>
-			**Zdjęcie 13.** P. Mykietyn, "Whoever hath her wish, thou hast thy will" to the words of Shakespeare's  Sonnet. (Autor: Krzysztof Warzała)
+			**Zdjęcie 13.** P. Mykietyn, "Whoever hath her wish, thou hast thy will"
+			to the words of Shakespeare's Sonnet. (Autor: Krzysztof Warzała)
 		</figcaption>
 	</figure>
 </div>
